--- a/inverjet_app/inverjet_app.ioc
+++ b/inverjet_app/inverjet_app.ioc
@@ -30,7 +30,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES,configMINIMAL_STACK_SIZE,configUSE_TICK_HOOK,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=Breath_Light_Ta,0,128,Breath_Light_Handler,Default,NULL,Dynamic,NULL,NULL;Rs485_Modbus_Ta,1,128,Rs485_Modbus_Handler,Default,NULL,Dynamic,NULL,NULL;Main_Task,-1,128,Main_Handler,Default,NULL,Dynamic,NULL,NULL;Key_Button_Task,-3,128,Key_Button_Handler,Default,NULL,Dynamic,NULL,NULL;Motor_Task,-3,256,Motor_Handler,Default,NULL,Dynamic,NULL,NULL;wifi_module,-3,768,wifi_module_Handler,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Breath_Light_Ta,-3,128,Breath_Light_Handler,Default,NULL,Dynamic,NULL,NULL;Rs485_Modbus_Ta,0,128,Rs485_Modbus_Handler,Default,NULL,Dynamic,NULL,NULL;Main_Task,2,128,Main_Handler,Default,NULL,Dynamic,NULL,NULL;Key_Button_Task,1,128,Key_Button_Handler,Default,NULL,Dynamic,NULL,NULL;Motor_Task,1,256,Motor_Handler,Default,NULL,Dynamic,NULL,NULL;wifi_module,1,640,wifi_module_Handler,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMAX_PRIORITIES=6
 FREERTOS.configMINIMAL_STACK_SIZE=128
 FREERTOS.configTOTAL_HEAP_SIZE=8192
@@ -67,56 +67,58 @@ Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA2
 Mcu.Pin11=PA3
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PB2
-Mcu.Pin19=PB10
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PB11
-Mcu.Pin21=PB12
-Mcu.Pin22=PB14
-Mcu.Pin23=PB15
-Mcu.Pin24=PC6
-Mcu.Pin25=PC7
-Mcu.Pin26=PC8
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
+Mcu.Pin20=PB2
+Mcu.Pin21=PB10
+Mcu.Pin22=PB11
+Mcu.Pin23=PB12
+Mcu.Pin24=PB14
+Mcu.Pin25=PB15
+Mcu.Pin26=PC6
+Mcu.Pin27=PC7
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=PA10
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PA15
-Mcu.Pin35=PC10
-Mcu.Pin36=PC11
-Mcu.Pin37=PC12
-Mcu.Pin38=PD2
-Mcu.Pin39=PB3
+Mcu.Pin30=PA8
+Mcu.Pin31=PA9
+Mcu.Pin32=PA10
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PA15
+Mcu.Pin37=PC10
+Mcu.Pin38=PC11
+Mcu.Pin39=PC12
 Mcu.Pin4=PC0
-Mcu.Pin40=PB4
-Mcu.Pin41=PB5
-Mcu.Pin42=PB6
-Mcu.Pin43=PB7
-Mcu.Pin44=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin45=VP_IWDG_VS_IWDG
-Mcu.Pin46=VP_SYS_VS_tim1
-Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin40=PD2
+Mcu.Pin41=PB3
+Mcu.Pin42=PB4
+Mcu.Pin43=PB5
+Mcu.Pin44=PB6
+Mcu.Pin45=PB7
+Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin47=VP_IWDG_VS_IWDG
+Mcu.Pin48=VP_SYS_VS_tim1
+Mcu.Pin49=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PC1
-Mcu.Pin50=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM6_VS_OPM
+Mcu.Pin50=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM6_VS_OPM
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=53
+Mcu.PinsNb=55
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -178,6 +180,11 @@ PA3.GPIO_Label=RS485_B
 PA3.GPIO_PuPd=GPIO_PULLDOWN
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=SW_3
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ADC_CN6
 PA5.Locked=true
@@ -186,6 +193,11 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ADC_CN6
 PA6.Locked=true
 PA6.Signal=ADCx_IN6
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA7.GPIO_Label=SW_4
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=Key_Power
 PA8.GPIO_PuPd=GPIO_PULLUP
@@ -333,8 +345,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=iUpstream_app.ioc
-ProjectManager.ProjectName=iUpstream_app
+ProjectManager.ProjectFileName=inverjet_app.ioc
+ProjectManager.ProjectName=inverjet_app
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
