--- a/inverjet_app/inverjet_app.ioc
+++ b/inverjet_app/inverjet_app.ioc
@@ -30,7 +30,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES,configMINIMAL_STACK_SIZE,configUSE_TICK_HOOK,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=Breath_Light_Ta,-3,128,Breath_Light_Handler,Default,NULL,Dynamic,NULL,NULL;Rs485_Modbus_Ta,0,128,Rs485_Modbus_Handler,Default,NULL,Dynamic,NULL,NULL;Main_Task,2,128,Main_Handler,Default,NULL,Dynamic,NULL,NULL;Key_Button_Task,1,128,Key_Button_Handler,Default,NULL,Dynamic,NULL,NULL;Motor_Task,1,256,Motor_Handler,Default,NULL,Dynamic,NULL,NULL;wifi_module,1,640,wifi_module_Handler,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Breath_Light_Ta,-3,128,Breath_Light_Handler,Default,NULL,Dynamic,NULL,NULL;Rs485_Modbus_Ta,0,128,Rs485_Modbus_Handler,Default,NULL,Dynamic,NULL,NULL;Main_Task,2,128,Main_Handler,Default,NULL,Dynamic,NULL,NULL;Key_Button_Task,1,128,Key_Button_Handler,Default,NULL,Dynamic,NULL,NULL;Motor_Task,1,256,Motor_Handler,Default,NULL,Dynamic,NULL,NULL;wifi_module,1,640,wifi_module_Handler,Default,NULL,Dynamic,NULL,NULL;BT_Task,-3,128,BT_Handler,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMAX_PRIORITIES=6
 FREERTOS.configMINIMAL_STACK_SIZE=128
 FREERTOS.configTOTAL_HEAP_SIZE=8192
