--- a/inverjet_app/inverjet_app.ioc
+++ b/inverjet_app/inverjet_app.ioc
@@ -145,9 +145,9 @@ NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UART4_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.UART5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:6\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
