--- a/inverjet_app/inverjet_app.ioc
+++ b/inverjet_app/inverjet_app.ioc
@@ -30,7 +30,7 @@ Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES,configMINIMAL_STACK_SIZE,configUSE_TICK_HOOK,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=Breath_Light_Ta,-3,128,Breath_Light_Handler,Default,NULL,Dynamic,NULL,NULL;Rs485_Modbus_Ta,0,128,Rs485_Modbus_Handler,Default,NULL,Dynamic,NULL,NULL;Main_Task,2,128,Main_Handler,Default,NULL,Dynamic,NULL,NULL;Key_Button_Task,1,128,Key_Button_Handler,Default,NULL,Dynamic,NULL,NULL;Motor_Task,1,256,Motor_Handler,Default,NULL,Dynamic,NULL,NULL;wifi_module,1,640,wifi_module_Handler,Default,NULL,Dynamic,NULL,NULL;BT_Task,-3,128,BT_Handler,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Breath_Light_Ta,-2,128,Breath_Light_Handler,Default,NULL,Dynamic,NULL,NULL;Rs485_Modbus_Ta,2,128,Rs485_Modbus_Handler,Default,NULL,Dynamic,NULL,NULL;Main_Task,2,128,Main_Handler,Default,NULL,Dynamic,NULL,NULL;Key_Button_Task,1,128,Key_Button_Handler,Default,NULL,Dynamic,NULL,NULL;Motor_Task,1,256,Motor_Handler,Default,NULL,Dynamic,NULL,NULL;wifi_module,1,640,wifi_module_Handler,Default,NULL,Dynamic,NULL,NULL;BT_Task,-3,128,BT_Handler,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMAX_PRIORITIES=6
 FREERTOS.configMINIMAL_STACK_SIZE=128
 FREERTOS.configTOTAL_HEAP_SIZE=8192
@@ -80,45 +80,49 @@ Mcu.Pin20=PB2
 Mcu.Pin21=PB10
 Mcu.Pin22=PB11
 Mcu.Pin23=PB12
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PC6
-Mcu.Pin27=PC7
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PB15
+Mcu.Pin27=PC6
+Mcu.Pin28=PC7
+Mcu.Pin29=PC8
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=PA8
-Mcu.Pin31=PA9
-Mcu.Pin32=PA10
-Mcu.Pin33=PA12
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PA15
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin30=PC9
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13
+Mcu.Pin37=PA14
+Mcu.Pin38=PA15
+Mcu.Pin39=PC10
 Mcu.Pin4=PC0
-Mcu.Pin40=PD2
-Mcu.Pin41=PB3
-Mcu.Pin42=PB4
-Mcu.Pin43=PB5
-Mcu.Pin44=PB6
-Mcu.Pin45=PB7
-Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin47=VP_IWDG_VS_IWDG
-Mcu.Pin48=VP_SYS_VS_tim1
-Mcu.Pin49=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD2
+Mcu.Pin43=PB3
+Mcu.Pin44=PB4
+Mcu.Pin45=PB5
+Mcu.Pin46=PB6
+Mcu.Pin47=PB7
+Mcu.Pin48=PB8
+Mcu.Pin49=PB9
 Mcu.Pin5=PC1
-Mcu.Pin50=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM6_VS_OPM
+Mcu.Pin50=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin51=VP_IWDG_VS_IWDG
+Mcu.Pin52=VP_SYS_VS_tim1
+Mcu.Pin53=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM6_VS_OPM
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=55
+Mcu.PinsNb=59
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -158,16 +162,23 @@ PA10.GPIOParameters=GPIO_PuPd
 PA10.GPIO_PuPd=GPIO_PULLDOWN
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=Fan_Switch
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=DI_Key_Up
+PA11.GPIO_PuPd=GPIO_PULLDOWN
+PA11.Locked=true
+PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA12.GPIO_Label=DI_Key_Down
+PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Locked=true
-PA12.Signal=GPIO_Output
-PA13.Mode=Trace_Asynchronous_SW
+PA12.Signal=GPIO_Input
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Trace_Asynchronous_SW
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_Label
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA15.GPIO_Label=LCD_BackLight
+PA15.GPIO_PuPd=GPIO_PULLDOWN
 PA15.Locked=true
 PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -223,30 +234,44 @@ PB11.GPIOParameters=GPIO_PuPd
 PB11.GPIO_PuPd=GPIO_PULLDOWN
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=CS
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Label
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=DI_Key_Power
+PB13.GPIO_PuPd=GPIO_PULLDOWN
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB14.GPIO_Label=WR
+PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=DATA
+PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=SPI1_CS
+PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3.Mode=Trace_Asynchronous_SW
-PB3.Signal=SYS_JTDO-TRACESWO
-PB4.GPIOParameters=GPIO_Label
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB3.GPIO_Label=Main_RS485_EN
+PB3.GPIO_PuPd=GPIO_PULLDOWN
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB4.GPIO_Label=Debug_Led_02
+PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
 PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=Debug_Led_01
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.Locked=true
@@ -255,12 +280,24 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB8.GPIO_Label=Debug_IO_01
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB9.GPIO_Label=Debug_IO_02
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC0.GPIO_Label=Led_Power
+PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC1.GPIO_Label=Led_Mode
+PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Speed
@@ -279,12 +316,14 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC2.GPIO_Label=Led_Time
+PC2.GPIO_PuPd=GPIO_PULLUP
 PC2.Locked=true
 PC2.Signal=GPIO_Output
-PC3.GPIOParameters=GPIO_Label
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC3.GPIO_Label=Led_Speed
+PC3.GPIO_PuPd=GPIO_PULLUP
 PC3.Locked=true
 PC3.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -297,8 +336,9 @@ PC5.GPIO_Label=SW_2
 PC5.GPIO_PuPd=GPIO_PULLUP
 PC5.Locked=true
 PC5.Signal=GPIO_Input
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=RS485_EN
+PC6.GPIO_PuPd=GPIO_PULLDOWN
 PC6.Locked=true
 PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
